实现了基础的推荐，recommendValue，根据标签搜索推荐

--- a/song-page/src/main/resources/templates/comments.html
+++ b/song-page/src/main/resources/templates/comments.html
@@ -69,6 +69,9 @@
 
             <!--菜单-->
             <ul class="nav nav-tabs">
+                <li>
+                    <a href="http://localhost:8080/recommend">热门歌曲推荐</a>
+                </li>
                 <li class="active">
                     <a href="http://localhost:8080/comments">热门评论</a>
                 </li>
