--- a/song-page/src/main/resources/templates/songs.html
+++ b/song-page/src/main/resources/templates/songs.html
@@ -71,6 +71,9 @@
          <!--菜单-->
          <ul class="nav nav-tabs">
              <li>
+                 <a href="http://localhost:8080/recommend">热门歌曲推荐</a>
+             </li>
+             <li>
                  <a href="http://localhost:8080/comments">热门评论</a>
              </li>
              <li>
