--- a/song-page/src/main/resources/templates/gtp.html
+++ b/song-page/src/main/resources/templates/gtp.html
@@ -70,7 +70,7 @@
             </script>
 
             <!--菜单-->
-            <ul class="nav nav-tabs">
+            <ul class="nav nav-tabs" style="margin-top: 10px">
                 <li>
                     <a href="http://localhost:8080/recommend">热门歌曲推荐</a>
                 </li>
