--- a/song-page/src/main/resources/templates/recommend.html
+++ b/song-page/src/main/resources/templates/recommend.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8"></meta>
     <title>歌曲列表</title>
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css"></link>
+
     <link rel="stylesheet" href="/css/footer.css"></link>
+
     <!--轮播样式-->
     <link rel="stylesheet" href="css/slide.css"></link>
     <script src="js/jquery.min.js"></script>
@@ -68,7 +70,7 @@
             </script>
 
             <!--菜单-->
-            <ul class="nav nav-tabs">
+            <ul class="nav nav-tabs" style="margin-top: 10px">
                 <li class="active">
                     <a href="http://localhost:8080/recommend">热门歌曲推荐</a>
                 </li>
@@ -87,15 +89,25 @@
             <div class="bdsharebuttonbox"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_evernotecn" data-cmd="evernotecn" title="分享到印象笔记"></a></div>
             <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"分享自HotMusic","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"16"},"share":{},"image":{"viewList":["weixin","qzone","tsina","evernotecn"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["weixin","qzone","tsina","evernotecn"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
 
-            <form class="form-search" action="#" th:action="@{/recommend.do}" th:object="${message}" method="post">
+            <!--<form class="form-search" action="#" th:action="@{/recommend.do}" th:object="${message}" method="post">
                 <input class="input-medium search-query" type="text" th:field="*{info}"/> <button type="submit" class="btn">查找</button>
+            </form>-->
+
+            <form style="height: 40px" action="#" th:action="@{/recommend.do}" th:object="${message}" method="post">
+                <select style="height: 30px" th:field="*{info}">
+                    <option th:each="tag : ${tagMap}"
+                            th:value="${tag.key}"
+                            th:text="${tag.value}">Wireframe</option>
+                </select>
+
+                <button type="submit" class="btn">选择标签</button>
             </form>
 
             <div class="row">
                 <div class="col-sm-6 col-md-3" th:each="song: ${songs.content}">
                     <div class="img-circle" style="height: 200px">
-                        <a href="http://p4.music.126.net/WLngCFABwRWbhGKBNOlmYw==/3384296791681732.jpg?param=130y130" class="thumbnail">
-                            <img src="http://p4.music.126.net/WLngCFABwRWbhGKBNOlmYw==/3384296791681732.jpg?param=130y130" ></img>
+                        <a th:href="${song.url}" class="thumbnail">
+                            <img th:src="${song.imgUrl}" ></img>
                         </a>
                         <div class="caption">
                             <p th:text="${song.title}" style="vertical-align: middle;text-align: center"></p>
