忘了修改了啥

--- a/song-page/src/main/resources/templates/comments.html
+++ b/song-page/src/main/resources/templates/comments.html
@@ -23,7 +23,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">歌曲评论列表(共<span th:text="${comments.totalElements}"></span>条评论)</a>
+            <a class="navbar-brand" href="#" style="margin-left: 170px">歌曲评论列表(共<span th:text="${comments.totalElements}"></span>条评论)</a>
         </div>
     </div>
 </nav>
