--- a/song-page/src/main/resources/templates/songs.html
+++ b/song-page/src/main/resources/templates/songs.html
@@ -23,7 +23,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="https://www.tianmaying.com/tutorial/music-163-crawler">网易云音乐歌曲列表(共<span th:text="${songs.totalElements}"></span>首歌曲)</a>
+      <a class="navbar-brand" style="margin-left: 170px">音乐歌曲列表(共<span th:text="${songs.totalElements}"></span>首歌曲)</a>
     </div>
   </div>
 </nav>
