--- a/song-page/src/main/resources/templates/recommend.html
+++ b/song-page/src/main/resources/templates/recommend.html
@@ -25,7 +25,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">歌曲推荐列表</a>
+            <a class="navbar-brand" href="#" style="margin-left: 170px">歌曲推荐</a>
         </div>
     </div>
 </nav>
